--- a/public/index.html
+++ b/public/index.html
@@ -35,4 +35,6 @@
     <div id="root"></div>
   
   </body>
+  
+  <script src="https://cdn.rawgit.com/progers/pathseg/master/pathseg.js"></script>
 </html>
